# developer-scb-sdk-rs

./: .gitignore  Cargo.toml  README.md
corescbsdk/: Cargo.toml
corescbsdk/src/: lib.rs
corescbsdk/src/entities/: base.rs  bill_pay.rs  bill_pay_tx.rs  billpay_tx.rs  mod.rs  qr_code.rs  qrcode.rs  validate.rs
corescbsdk/src/errors/: mod.rs  scb_error.rs
corescbsdk/src/frameworks/apis/: api_utils.rs  mod.rs  qr_code_payment.rs  scb.rs  scb_api.rs  scbapi.rs
corescbsdk/src/frameworks/apis/payments/: bill_pay.rs  bill_payment.rs  mod.rs  qr_code.rs
example/: Cargo.toml  run_qr_code.sh  run_slip_verification.sh
example/src/: example_qr_code.rs  example_slip_verification.rs  main.rs
