[package]
name = "corescbsdk"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib","rlib","staticlib"]


[dependencies]
tokio = {version = "1.0", features = ["full"]}
reqwest = {version = "0.12",default-features = false, features = ["rustls-tls","json","http2","charset"]}
serde = {version = "1.0" , features = ["derive"]}
serde_json = "1.0"
log = "0.4"
chrono = "0.4"
validator = { version = "0.18", features = ["derive"] }
regex = "1.10"

[dependencies.uuid]
version = "1.10"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
]
