[package]
name = "example"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "example_qr_cs"
path = "src/example_qr_code.rs"

[[bin]]
name = "example_slip_verification"
path = "src/example_slip_verification.rs"


[dependencies]
corescbsdk = { path = "../corescbsdk" }
tokio = {version = "1", features = ["full"]}
pretty_env_logger = "0.5"
log = "0.4"
dotenv = "0.15"
